force-app/main/default/objects/Investment_Transaction__c/fields/Bond_Details__c.field-meta.xml
<CustomField>
    <fullName>Bond_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bond Details</label>
    <referenceTo>Bond__c</referenceTo>
    <relationshipLabel>Investment Transactions</relationshipLabel>
    <relationshipName>Investment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>