force-app/main/default/objects/Investment_Transaction__c/fields/Buy_NAV__c.field-meta.xml
<CustomField>
    <fullName>Buy_NAV__c</fullName>
    <inlineHelpText>only for MF</inlineHelpText>
    <label>Buy NAV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>