force-app/main/default/objects/Investment_Transaction__c/fields/Created_From__c.field-meta.xml
<CustomField>
    <fullName>Created_From__c</fullName>
    <label>Created From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>