force-app/main/default/objects/Investment_Transaction__c/fields/EPF_Details__c.field-meta.xml
<CustomField>
    <fullName>EPF_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EPF Details</label>
    <referenceTo>EPF__c</referenceTo>
    <relationshipName>Investment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>