force-app/main/default/objects/Investment_Transaction__c/fields/FD_Duration__c.field-meta.xml
<CustomField>
    <fullName>FD_Duration__c</fullName>
    <description>Duration in Days</description>
    <label>FD Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>