force-app/main/default/objects/Investment_Transaction__c/fields/Fund_Details__c.field-meta.xml
<CustomField>
    <fullName>Fund_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund Details</label>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Investment Transactions</relationshipLabel>
    <relationshipName>Investment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>