force-app/main/default/objects/Investment_Transaction__c/fields/Investment_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Investment_Portfolio__c</fullName>
    <label>Investment Portfolio</label>
    <referenceTo>Investment_Portfolio__c</referenceTo>
    <relationshipName>Investment_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>