force-app/main/default/objects/Investment_Transaction__c/fields/Investment_Type__c.field-meta.xml
<CustomField>
    <fullName>Investment_Type__c</fullName>
    <label>Investment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>