force-app/main/default/objects/Investment_Transaction__c/fields/Investment_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Investment_Type_Formula__c</fullName>
    <formula>IF(NOT(ISBLANK(Bond_Details__c)), &apos;Bond&apos;, 
 IF(NOT(ISBLANK(EPF_Details__c)), &apos;EPF&apos;, 
  IF(NOT(ISBLANK(FD_Details__c)), &apos;FD&apos;,
   IF(NOT(ISBLANK(Fund_Details__c)), &apos;MF&apos;, 
    IF(NOT(ISBLANK(Metal_Investment_Details__c)), &apos;Metal&apos;,
     IF(NOT(ISBLANK(PPF_Details__c)), &apos;PPF&apos;,
      IF(NOT(ISBLANK(SIP_Details__c)), &apos;SIP&apos;, 
       IF(NOT(ISBLANK(SmallCase_Details__c)), &apos;SmallCase&apos;,
        IF(NOT(ISBLANK(Stock_Details__c)), &apos;Stock&apos;, 
         IF(NOT(ISBLANK(Treasury_Bill_Details__c)), &apos;TreasuryBill&apos;,
          IF(NOT(ISBLANK(ULIP_Details__c)), &apos;ULIP&apos;,
           IF(NOT(ISBLANK( NPS_Details__c )), &apos;NPS&apos;, &apos;None&apos;)
          )
         )
        )
       )
      )
     )
    )
   )
  )
 ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Type Fromula</label>
    <type>Text</type>
</CustomField>