force-app/main/default/objects/Investment_Transaction__c/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <formula>Transaction_Date__c + FD_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>