force-app/main/default/objects/Investment_Transaction__c/fields/Metal_Investment_Details__c.field-meta.xml
<CustomField>
    <fullName>Metal_Investment_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Metal Investment Details</label>
    <referenceTo>Metal__c</referenceTo>
    <relationshipName>Investment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>