force-app/main/default/objects/Investment_Transaction__c/fields/MF_Buy_NAV__c.field-meta.xml
<CustomField>
    <fullName>MF_Buy_NAV__c</fullName>
    <label>MF Buy NAV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>