force-app/main/default/objects/Investment_Transaction__c/fields/NPS_Details__c.field-meta.xml
<CustomField>
    <fullName>NPS_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPS Details</label>
    <referenceTo>NPS__c</referenceTo>
    <relationshipLabel>Investment Transactions</relationshipLabel>
    <relationshipName>Investment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>