force-app/main/default/objects/Investment_Transaction__c/fields/PPF_Details__c.field-meta.xml
<CustomField>
    <fullName>PPF_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PPF Details</label>
    <referenceTo>PPF__c</referenceTo>
    <relationshipName>Investment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>