force-app/main/default/objects/Investment_Transaction__c/fields/SmallCase_Details__c.field-meta.xml
<CustomField>
    <fullName>SmallCase_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SmallCase Details</label>
    <referenceTo>SmallCase__c</referenceTo>
    <relationshipLabel>Investment Transactions</relationshipLabel>
    <relationshipName>Investment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>