force-app/main/default/objects/Investment_Transaction__c/fields/Stock_Buy_Price__c.field-meta.xml
<CustomField>
    <fullName>Stock_Buy_Price__c</fullName>
    <label>Stock Buy Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>