force-app/main/default/objects/Investment_Transaction__c/fields/Stock_Details__c.field-meta.xml
<CustomField>
    <fullName>Stock_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock Details</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Investment Transactions</relationshipLabel>
    <relationshipName>Investment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>