force-app/main/default/objects/Investment_Transaction__c/fields/Stock_Units__c.field-meta.xml
<CustomField>
    <fullName>Stock_Units__c</fullName>
    <label>Stock Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>