force-app/main/default/objects/Investment_Transaction__c/fields/Treasury_Bill_Details__c.field-meta.xml
<CustomField>
    <fullName>Treasury_Bill_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treasury Bill Details</label>
    <referenceTo>Treasury_Bill__c</referenceTo>
    <relationshipLabel>Investment Transactions</relationshipLabel>
    <relationshipName>Investment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>