force-app/main/default/objects/Investment_Transaction__c/fields/ULIP_Details__c.field-meta.xml
<CustomField>
    <fullName>ULIP_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ULIP Details</label>
    <referenceTo>ULIP__c</referenceTo>
    <relationshipName>Investment_Instruments</relationshipName>
    <type>Lookup</type>
</CustomField>