force-app/main/default/objects/Investment_Transaction__c/recordTypes/EPF.recordType-meta.xml
<RecordType>
    <fullName>EPF</fullName>
    <active>true</active>
    <label>EPF</label>
</RecordType>