force-app/main/default/objects/Investment_Transaction__c/recordTypes/FD.recordType-meta.xml
<RecordType>
    <fullName>FD</fullName>
    <active>true</active>
    <label>FD</label>
</RecordType>