force-app/main/default/objects/Investment_Transaction__c/recordTypes/Metal.recordType-meta.xml
<RecordType>
    <fullName>Metal</fullName>
    <active>true</active>
    <label>Metal</label>
</RecordType>