force-app/main/default/objects/Investment_Transaction__c/recordTypes/PPF.recordType-meta.xml
<RecordType>
    <fullName>PPF</fullName>
    <active>true</active>
    <label>PPF</label>
</RecordType>