force-app/main/default/objects/Investment_Transaction__c/recordTypes/SmallCase.recordType-meta.xml
<RecordType>
    <fullName>SmallCase</fullName>
    <active>true</active>
    <label>SmallCase</label>
</RecordType>