force-app/main/default/objects/Investment_Transaction__c/recordTypes/Stock.recordType-meta.xml
<RecordType>
    <fullName>Stock</fullName>
    <active>true</active>
    <label>Stock</label>
</RecordType>