force-app/main/default/objects/Investment_Transaction__c/recordTypes/TreasuryBill.recordType-meta.xml
<RecordType>
    <fullName>TreasuryBill</fullName>
    <active>true</active>
    <label>TreasuryBill</label>
</RecordType>