force-app/main/default/objects/Investment_Transaction__c/recordTypes/ULIP.recordType-meta.xml
<RecordType>
    <fullName>ULIP</fullName>
    <active>true</active>
    <label>ULIP</label>
</RecordType>