force-app/main/default/objects/Investment_Transaction__c/validationRules/FD_Investment_Transaction_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>FD_Investment_Transaction_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISBLANK( FD_Duration__c ),
FD_Duration__c = 0,
ISBLANK( Interest_Rate__c  ),
Interest_Rate__c &lt;= 0
)
)</errorConditionFormula>
    <errorMessage>Fill in FD related section.</errorMessage>
</ValidationRule>