force-app/main/default/objects/Investment_Transaction__c/validationRules/MF_Investment_Transaction_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>MF_Investment_Transaction_Validation</fullName>
    <active>true</active>
    <description>Validation for MF type investments.</description>
    <errorConditionFormula>AND(
OR(
ISBLANK( Units__c ),
Units__c &lt;= 0
)
)</errorConditionFormula>
    <errorDisplayField>Units__c</errorDisplayField>
    <errorMessage>Fill in MF related section.</errorMessage>
</ValidationRule>